# diffusion2D

./: .gitattributes  .pypirc  README.md  pyproject.toml  setup.py
guanpu_diffusion2d/: __init__.py  _version.py  diffusion2d.py  output.py
guanpu_diffusion2d.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
