[build-system]
requires = ["setuptools", "wheel", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "guanpu_diffusion2d/_version.py"
versionfile_build = "guanpu_diffusion2d/_version.py"
tag_prefix = "v"
parentdir_prefix = "guanpu_diffusion2d-"

[project]
name = "guanpu_diffusion2d"
#version = "0.0.0+versioneer"
description = "A Python package for simulating 2D heat diffusion"
readme = "README.md" 
license = { file = "LICENSE" }
authors = [
    { name = "Guanpu Tian", email = "st181070@stud.uni-stuttgart.de" }
]
dependencies = [
    "numpy",
    "matplotlib"
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/lVentus/diffusion2D"

[project.scripts]
solver = "guanpu_diffusion2d:solve"
